Fix: project-behance no gap

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1335,13 +1335,13 @@ body.light .navbar {
 .behance-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 320px);
+  grid-template-rows: repeat(2, 420px);
   gap: 0;
   border-radius: 14px;
   overflow: hidden;
-  max-width: 1100px;
+  max-width: 1600px;
   /* limita largura */
-  margin: 0 auto;
+  margin: 0 0;
   /* centraliza */
 }
 
